# django-5-by-example

./: README.md  merge.py  pyproject.toml
.github/: run.sh
ch01/: manage.py
ch01/blog/: models.py  views.py
ch01/blog/tests/: test_admin_post.py
ch01/ch01/: settings.py  urls.py
ch01/mysite/blog/: admin.py
ch01/mysite/blog/migrations/: 0001_initial.py
ch01/mysite/blog/tests/: test_models.py  test_views.py
ch01/mysite/mysite/: settings.py
ch02/: manage.py
ch02/blog/: admin.py  factories.py  models.py  urls.py  views.py
ch02/blog/management/commands/: seed_posts.py
ch02/blog/migrations/: 0002_alter_post_slug.py  0003_comment.py
ch02/blog/templates/: pagination.html
ch02/blog/tests/: test_models.py  test_views.py
ch02/ch02/: settings.py  urls.py
ch03/: manage.py
ch03/blog/: factories.py  feeds.py  forms.py  models.py  sitemaps.py  urls.py  views.py
ch03/blog/management/commands/: seed_users.py
ch03/blog/migrations/: 0004_post_tags.py
ch03/blog/templates/blog/: base.html
ch03/blog/templatetags/: blog_tags.py
ch03/blog/tests/: test_models.py  test_views.py
ch03/ch03/: settings.py  urls.py
